# robit-vision

./: README.md  calibration_mark.txt  qulv.txt  sample_point.txt  threshold_value.txt
gige_cap/: CMakeLists.txt  README.md  package.xml
gige_cap/doc/: manifest.yaml
gige_cap/doc/html/: annotated.html  classes.html  dir_000000_000001.html  dir_0deade5599cfdbace8d6cec3ac032367.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  gige__capture_8cpp.html  gige__capture_8cpp__incl.map  gige__capture_8cpp__incl.md5  gige__capture_8cpp_source.html  gige__common_8h.html  gige__common_8h__dep__incl.map  gige__common_8h__dep__incl.md5  gige__common_8h__incl.map  gige__common_8h__incl.md5  gige__common_8h_source.html  gige__config_8h.html  gige__config_8h__dep__incl.map  gige__config_8h__dep__incl.md5  gige__config_8h_source.html  gige__connect_8cpp.html  gige__connect_8cpp__incl.map  gige__connect_8cpp__incl.md5  gige__connect_8cpp_source.html  gige__main_8cpp.html  gige__main_8cpp__incl.map  gige__main_8cpp__incl.md5  gige__main_8cpp_source.html  globals.html  globals_func.html  graph_legend.html  group__retryover__group.html  index-msg.html  index.html  mainpage_8dox.html  modules.html  (+12 more)
gige_cap/include/gige_cap/: gige_config.h
gige_cap/launch/: gige_view.launch
gige_cap/src/: gige_capture.cpp  gige_common.h  gige_connect.cpp  gige_main.cpp  gige_setparam.cpp  mainpage.dox
gige_cap/srv/: SetParam.srv
image_processor/: CMakeLists.txt  package.xml
image_processor/msg/: Obstacle_Location.msg
image_processor/src/: Thresholder.cpp  Thresholder.h  Thresholder_Main.cpp  image_process_main.cpp  listenner.cpp  main.cpp  msg_transport.cpp  msg_transport.h  talker.cpp
localization/: CMakeLists.txt  package.xml
localization/msg/: Location.msg  Samples.msg
localization/src/: localizer.cpp  localizer.h  main.cpp  scanlinemain.cpp  sign.cpp  sign.h
